# llm-rpg

./: .coveragerc  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  demo_battle_system.py  demo_consumable_crafting.py  demo_enhanced_battle_system.py  demo_extended_merchant_system.py  demo_job_system_migrated.py  demo_mention_system.py  demo_private_posts.py  demo_sns.py  demo_spot_action_system.py  pyproject.toml  pytest.ini  requirements.txt  test_battle_basic.py  test_battle_integration.py  test_curses_ui.py  test_follow_fix.py
.ai-workflow/: .gitignore  README.md
.github/: pull_request_template.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
data/: characters.json
demos/: demo_action_orchestrator_sns.py  demo_advanced_map_management.py  demo_battle_complete.py  demo_bulletin_board_and_monument.py  demo_defense_system.py  demo_defense_system_simple.py  demo_escape_room.py  demo_extended_merchant_system.py  demo_home_system.py  demo_job_system.py  demo_map_extension.py  demo_quest_action.py  demo_sns_system.py  demo_structured_output.py  demo_trade_action.py  demo_trade_system.py  demo_turn_inspection_methods.py  demo_turn_management_system.py  demo_weapon_system.py
docs/: README.md  active_goal_management_assessment.md  agent_design_principles.md  agent_handoff_import_scenario_runners.md  being_architecture_master_plan.md  (+34 more)
tools/asset_pipeline/: pyproject.toml
tools/asset_pipeline/src/asset_pipeline/: __init__.py  __main__.py  cli.py  imaging.py
tools/asset_pipeline/tests/: test_imaging.py
(+3884 files in other folders)
