[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-rpg-world"
version = "0.1.0"
description = "AI RPG World Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coverage==7.9.2",
    "exceptiongroup==1.3.0",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "PyYAML==6.0.1",
    "tomli==2.2.1",
    "typing_extensions==4.14.1",
    "litellm==1.44.9",
    "pydantic==2.8.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
