[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-pipeline"
version = "0.1.0"
description = "Sprite utilities: grid split and horizontal merge for frontend/public assets"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
# rembg[cpu]: ONNX ランタイムを同梱。
# onnxruntime 1.18+ の一部 wheel は「macOS 13.4+」向けで、13.2 などでは libc++ シンボル不一致になる。
# 1.17.x の universal2 (macosx_11) は古めの macOS でも動きやすい。
rembg = [
    "rembg[cpu]>=2.0.50",
    "onnxruntime>=1.17.3,<1.18",
    "numpy>=1.26.0,<2",
]
dev = ["pytest>=8.0.0"]

[project.scripts]
asset-pipeline = "asset_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
